--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -212,6 +212,16 @@
   url       = {https://broadviewpress.com/product/the-broadview-anthology-of-restoration-and-early-eighteenth-century-drama/?ph=95bf68a5569261c0022b0608},
 }
 
+@Book{Aebischer2004,
+  title     = {Shakespeare's Violated Bodies: Stage and Screen Performance},
+  publisher = {Cambridge University Press},
+  year      = {2004},
+  author    = {Aebischer, P.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://books.google.fr/books/about/Shakespeare_s_Violated_Bodies.html?id=NevbglOeUgsC},
+}
+
 @InProceedings{Agarwal2009,
   author    = {Agarwal, A. and Biadsy, F. and McKeown, K. R.},
   title     = {Contextual Phrase-Level Polarity Analysis Using Lexical Affect Scoring and Syntactic N-Grams},
@@ -487,7 +497,7 @@
 @Article{Ahnert2015,
   author    = {Ahnert, R. and Ahnert, S. E.},
   title     = {Protestant Letter Networks in the Reign of Mary I: A Quantitative Approach},
-  journal   = {ELH},
+  journal   = {English Literary History},
   year      = {2015},
   volume    = {82},
   number    = {1},
@@ -1755,6 +1765,16 @@
   url       = {https://en.wikipedia.org/wiki/Epic_and_Novel},
 }
 
+@Book{Bakhtin1984,
+  title     = {Rabelais and his World},
+  publisher = {Indiana University Press},
+  year      = {1984},
+  author    = {Bakhtin, M.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://books.google.fr/books/about/Rabelais_and_His_World.html?id=SkswFyhqRIMC},
+}
+
 @Book{Bakhtin1986,
   title     = {Speech Genres and Other Late Essays},
   publisher = {University of Texas Press},
@@ -2645,6 +2665,19 @@
   url       = {https://books.google.fr/books/about/Théorie_des_graphes_et_ses_applications.html?id=T_YrAAAAIAAJ},
 }
 
+@Article{Bergeron1991,
+  author    = {Bergeron, D. M.},
+  title     = {``Richard II'' and Carnival Politics},
+  journal   = {Shakespeare Quarterly},
+  year      = {1991},
+  volume    = {42},
+  number    = {1},
+  pages     = {33},
+  doi       = {10.2307/2870651},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @InProceedings{BergerWolf2006,
   author    = {Berger-Wolf, T. Y. and Saia, J.},
   title     = {A framework for analysis of dynamic social networks},
@@ -2714,6 +2747,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.02},
   url       = {https://books.google.fr/books/about/The_ancient_world_of_the_Celts.html?id=38JmAAAAMAAJ&redir_esc=y},
+}
+
+@Article{Berry1972,
+  author    = {Berry, R.},
+  title     = {Shakespearean Comedy and Northrop Frye},
+  journal   = {Essays in Criticism},
+  year      = {1972},
+  volume    = {XXII},
+  number    = {1},
+  pages     = {33-40},
+  doi       = {10.1093/eic/xxii.1.33},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
 }
 
 @Article{Berry2011,
@@ -3568,6 +3614,19 @@
   timestamp = {2015.11.26},
 }
 
+@Article{Borgatti2011,
+  author    = {Borgatti, S. P. and Halgin, D. S.},
+  title     = {On Network Theory},
+  journal   = {Organization Science},
+  year      = {2011},
+  volume    = {22},
+  number    = {5},
+  pages     = {1168-1181},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.jstor.org/stable/41303110},
+}
+
 @Book{Borgatti2013,
   title     = {Analyzing Social Networks},
   publisher = {Sage},
@@ -3847,6 +3906,16 @@
   doi       = {10.1109/icsc.2011.48},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Book{Bradley1909,
+  title     = {Oxford Lectures on Poetry},
+  publisher = {Macmillan},
+  year      = {1909},
+  author    = {Bradley, A. C.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {http://www.gutenberg.org/ebooks/36773},
 }
 
 @InCollection{Braha2009,
@@ -4164,6 +4233,19 @@
   owner     = {Vincent},
   timestamp = {2019.03.27},
   url       = {https://www.aaai.org/Library/Symposia/Fall/2007/fs07-05-003.php},
+}
+
+@Article{Bristol1983,
+  author    = {Bristol, M. D.},
+  title     = {Carnival and the Institutions of Theater in Elizabethan England},
+  journal   = {English Literary History},
+  year      = {1983},
+  volume    = {50},
+  number    = {4},
+  pages     = {637},
+  doi       = {10.2307/2872921},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
 }
 
 @Article{Broder2000,
@@ -5569,6 +5651,16 @@
   timestamp = {2020.07.19},
 }
 
+@Book{Cheney2008,
+  title     = {Shakespeare's Literary Authorship},
+  publisher = {Cambridge University Press},
+  year      = {2008},
+  author    = {Cheney, P.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://books.google.fr/books/about/Shakespeare_s_Literary_Authorship.html?id=G5dttgAACAAJ},
+}
+
 @InProceedings{Cheng2009,
   author    = {Cheng, K.-Y. and Luo, S.-J. and Chen, B.-Y. and Chu, H.-H.},
   title     = {{SmartPlayer}: user-centric video fast-forwarding},
@@ -6004,6 +6096,19 @@
   timestamp = {2015.11.22},
 }
 
+@Article{Claycomb2013,
+  author    = {Claycomb, R.},
+  title     = {Here's How You Produce This Play: Towards a Narratology of Dramatic Texts},
+  journal   = {Narrative},
+  year      = {2013},
+  volume    = {21},
+  number    = {2},
+  pages     = {159-179},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.jstor.org/stable/24615419},
+}
+
 @Article{Clement2008,
   author    = {Clement, T. E.},
   title     = {'A thing not beginning and not ending': Using digital tools to distant-read Gertrude Stein's The Making of Americans},
@@ -6266,6 +6371,17 @@
   doi       = {10.1145/1054972.1054985},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@InCollection{Cook1997,
+  author    = {Cook, A. J.},
+  title     = {Audiences: Investigation, Interpretation, Invention},
+  booktitle = {A New History of Early English Drama},
+  publisher = {Columbia University Press},
+  year      = {1997},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {http://cup.columbia.edu/book/a-new-history-of-early-english-drama/9780231102438},
 }
 
 @Article{Cooper2005,
@@ -6837,6 +6953,19 @@
   url       = {https://books.google.fr/books/about/Routledge_Encyclopedia_of_Narrative_Theo.html?id=1O4FzO0ORAAC},
 }
 
+@Article{Danner2003,
+  author    = {Danner, B.},
+  title     = {Speaking Daggers},
+  journal   = {Shakespeare Quarterly},
+  year      = {2003},
+  volume    = {54},
+  number    = {1},
+  pages     = {29-62},
+  doi       = {10.1353/shq.2003.0052},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @Article{Danon2005,
   author    = {Danon, L. and Díaz-Guilera, A. and Duch, J. and Arenas, A.},
   title     = {Comparing Community Structure Identification},
@@ -6848,6 +6977,19 @@
   doi       = {10.1088/1742-5468/2005/09/P09008},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Danson1984,
+  author    = {Danson, L.},
+  title     = {Jonsonian Comedy and the Discovery of the Social Self},
+  journal   = {Publications of the Modern Language Association},
+  year      = {1984},
+  volume    = {99},
+  number    = {2},
+  pages     = {179-193},
+  doi       = {10.2307/462160},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
 }
 
 @Article{Das2014,
@@ -7048,6 +7190,19 @@
   url         = {http://guava.physics.uiuc.edu/~nigel/courses/569/Essays_Fall2007/files/DeGottardi.pdf},
 }
 
+@Article{deGrazia1993,
+  author    = {de Grazia, M. and Stallybrass, P.},
+  title     = {The Materiality of the Shakespearean Text},
+  journal   = {Shakespeare Quarterly},
+  year      = {1993},
+  volume    = {44},
+  number    = {3},
+  pages     = {255},
+  doi       = {10.2307/2871419},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @Article{deJesusHolanda2004,
   author    = {de Jesus Holanda, A. and Torres Pisa, I. and Kinouchi, O. and Souto Martinez, A. and Seron Ruiz, E. E.},
   title     = {Thesaurus as a complex network},
@@ -7084,6 +7239,16 @@
   url       = {http://aclweb.org/anthology/N18-5016},
 }
 
+@Book{Deleuze1987,
+  title     = {A Thousand Plateaus},
+  publisher = {University of Minnesota Press.},
+  year      = {1987},
+  author    = {Deleuze, G. and Guattari, F.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.upress.umn.edu/book-division/books/a-thousand-plateaus},
+}
+
 @Article{DelFabro2013,
   author    = {Del Fabro, M. and Böszörmenyi, L.},
   title     = {State-of-the-art and future challenges in video scene detection: a survey},
@@ -7108,6 +7273,16 @@
   doi       = {10.1073/pnas.1517441113},
   owner     = {Vincent},
   timestamp = {2020.07.22},
+}
+
+@Book{DeMarinis1993,
+  title     = {The Semiotics of Performance},
+  publisher = {Indiana University Press},
+  year      = {1993},
+  author    = {De Marinis, M.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://books.google.fr/books/about/The_Semiotics_of_Performance.html?id=FspJxw0-ETUC},
 }
 
 @Article{DeMeo2015,
@@ -7817,6 +7992,19 @@
   timestamp = {2019.03.22},
 }
 
+@Article{Dubini1991,
+  author    = {Dubini, P. and Aldrich, H.},
+  title     = {Personal and extended networks are central to the entrepreneurial process},
+  journal   = {Journal of Business Venturing},
+  year      = {1991},
+  volume    = {6},
+  number    = {5},
+  pages     = {305-313},
+  doi       = {10.1016/0883-9026(91)90021-5},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @Article{DuBois2011,
   author    = {DuBois, T. A.},
   title     = {Juxtaposing Cogadh Gaedel re Gallaib with Orkneyinga saga},
@@ -8095,6 +8283,16 @@
   timestamp = {2019.04.09},
 }
 
+@TechReport{Ebers1997,
+  author      = {Ebers, M.},
+  title       = {Explaining inter-organizational network formation},
+  institution = {University of Cologne},
+  year        = {1997},
+  owner       = {Vincent},
+  timestamp   = {2020.07.25},
+  url         = {https://pdfs.semanticscholar.org/cc51/89c30369b16b373cc47f2b39b1d89802af07.pdf},
+}
+
 @Article{Ebrahimpour2013,
   author    = {Ebrahimpour, M. and Putniņš , T. J. and Berryman, M. J. and Allison, A. and Ng, B. W.-H. and Abbott, D.},
   title     = {Automated Authorship Attribution Using Advanced Signal Classification Techniques},
@@ -8324,6 +8522,17 @@
   owner     = {Vincent},
   timestamp = {2020.07.21},
   url       = {https://arxiv.org/abs/1506.00711},
+}
+
+@InCollection{Eliot1998,
+  author    = {Eliot, T. S.},
+  title     = {Hamlet and his Problems},
+  booktitle = {The Sacred Wood},
+  publisher = {Mineola},
+  year      = {1998},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.bartleby.com/200/sw9.html},
 }
 
 @PhdThesis{Elliot1992,
@@ -8563,6 +8772,16 @@
   url       = {https://books.google.fr/books/about/Shakespeare_and_the_Book_Trade.html?id=vi8WBQAAQBAJ&redir_esc=y},
 }
 
+@Book{Erne2013a,
+  title     = {Shakespeare as Literary Dramatist},
+  publisher = {Cambridge University Press},
+  year      = {2013},
+  author    = {Erne, L.},
+  doi       = {10.1017/cbo9781139342445},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @InProceedings{Ester1996,
   author    = {Ester, M. and Kriegel, H.-P. and Sander, J. and Xu, X.},
   title     = {A Density-Based Algorithm for Discovering Clusters in Large Spatial Databases with Noise},
@@ -8753,6 +8972,17 @@
   doi       = {10.1145/1014052.1014067},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@InCollection{Ewbank1983,
+  author    = {Ewbank, I.-S.},
+  title     = {The Word in the Theater},
+  booktitle = {Shakespeare, Man of the Theater},
+  publisher = {University of Delaware Press},
+  year      = {1983},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://books.google.fr/books?id=ToXbBQxszxUC},
 }
 
 @Article{Facchetti2011,
@@ -9459,6 +9689,17 @@
   url       = {https://books.google.fr/books/about/The_Irish_tradition.html?id=y4ZiAAAAMAAJ&redir_esc=y},
 }
 
+@InCollection{Fludernik2008,
+  author    = {Fludernik, M.},
+  title     = {Narrative and Drama},
+  booktitle = {Theorizing Narrativity},
+  publisher = {Walter de Gruyter},
+  year      = {2008},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://books.google.fr/books/about/Theorizing_Narrativity.html?id=JqIB5DpBxtIC},
+}
+
 @Book{Fludernik2009,
   title     = {An Introduction to Narratology},
   publisher = {Routledge},
@@ -9467,6 +9708,29 @@
   owner     = {Vincent},
   timestamp = {2019.06.24},
   url       = {https://books.google.fr/books/about/An_Introduction_to_Narratology.html?id=uwmIgqX9WCYC},
+}
+
+@Book{Foakes2003,
+  title     = {Shakespeare and Violence},
+  publisher = {Cambridge University Press},
+  year      = {2003},
+  author    = {Foakes, R. A.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {http://services.cambridge.org/us/academic/subjects/literature/renaissance-and-early-modern-literature/shakespeare-and-violence},
+}
+
+@Article{Foakes2006,
+  author    = {Foakes, R. A.},
+  title     = {Performance Theory and Textual Theory: A Retort Courteous},
+  journal   = {Shakespeare},
+  year      = {2006},
+  volume    = {2},
+  number    = {1},
+  pages     = {47-58},
+  doi       = {10.1080/17450910600662877},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
 }
 
 @Article{FontouraCosta2004a,
@@ -10642,6 +10906,19 @@
   timestamp = {2020.01.02},
 }
 
+@Article{Goldberg2013,
+  author    = {Goldberg, J.},
+  title     = {Carnival in The Merchant of Venice},
+  journal   = {Postmedieval},
+  year      = {2013},
+  volume    = {4},
+  number    = {4},
+  pages     = {427-438},
+  doi       = {10.1057/pmed.2013.32},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @Book{Golden2002,
   title     = {Thomas Jefferson and the Rhetoric of Virtue},
   publisher = {Rowman and Littlefield},
@@ -10664,6 +10941,16 @@
   doi       = {10.1007/978-3-540-73133-7_6},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@Book{Goldman1985,
+  title     = {Acting and Action in Shakespearean Tragedy},
+  publisher = {Princeton University Press},
+  year      = {1985},
+  author    = {Goldman, M.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://press.princeton.edu/books/hardcover/9780691639802/acting-and-action-in-shakespearean-tragedy},
 }
 
 @Article{Goldstein1996,
@@ -10739,6 +11026,18 @@
   doi       = {10.1016/j.neucom.2014.11.034},
   owner     = {Vincent},
   timestamp = {2019.04.03},
+}
+
+@InCollection{Gorfain1998,
+  author    = {Gorfain, P.},
+  title     = {Towards a Theory of Play and the Carnivalesque in Hamlet},
+  booktitle = {Shakespeare and Carnival},
+  publisher = {Palgrave Macmillan},
+  year      = {1998},
+  pages     = {152-176},
+  doi       = {10.1057/9780230000810_8},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
 }
 
 @InProceedings{Gorinski2015,
@@ -10865,6 +11164,19 @@
   doi       = {10.1016/j.knosys.2019.06.024},
   owner     = {Vincent},
   timestamp = {2020.07.19},
+}
+
+@Article{Grady2001,
+  author    = {Grady, H.},
+  title     = {Falstaff: Subjectivity between the Carnival and the Aesthetic},
+  journal   = {Modern Language Review},
+  year      = {2001},
+  volume    = {96},
+  number    = {3},
+  pages     = {609},
+  doi       = {10.2307/3736733},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
 }
 
 @InCollection{Graesser1991,
@@ -11440,6 +11752,16 @@
   timestamp = {2019.04.11},
 }
 
+@Book{Gurr2009,
+  title     = {The Shakespearean Stage 1574-1642},
+  publisher = {Cambridge University Press},
+  year      = {2009},
+  author    = {Gurr, A.},
+  doi       = {10.1017/cbo9780511819520},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @Article{Gutmann2012,
   author    = {Gutmann, M. U. and Hyvärinen, A.},
   title     = {Noise-contrastive estimation of unnormalized statistical models, with applications to natural image statistics},
@@ -11595,6 +11917,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.01},
   url       = {https://www.rug.nl/news/2008/01/01_05?lang=en},
+}
+
+@Article{Hammond1992,
+  author    = {Hammond, A.},
+  title     = {Encounters of the Third Kind in Stage-Directions in Elizabethan and Jacobean Drama},
+  journal   = {Studies in Philology},
+  year      = {1992},
+  volume    = {89},
+  number    = {1},
+  pages     = {71-99},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.jstor.org/stable/4174411},
 }
 
 @InProceedings{Han2009,
@@ -12110,6 +12445,16 @@
   timestamp = {2019.04.12},
 }
 
+@Book{Hegel1975,
+  title     = {Hegel on Tragedy},
+  publisher = {Harper and Row},
+  year      = {1975},
+  author    = {Hegel, G. W. F.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://books.google.fr/books/about/Hegel_on_Tragedy.html?id=HAUbAQAAIAAJ},
+}
+
 @Article{Heider1946,
   author    = {Heider, F.},
   title     = {Attitudes and cognitive organization},
@@ -12144,6 +12489,19 @@
   doi       = {10.1111/j.1559-1816.1993.tb01008.x},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Heller2005,
+  author    = {Heller, J. L.},
+  title     = {Space, Violence, and Bodies in Middleton and Cary},
+  journal   = {Studies in English Literature 1500-1900},
+  year      = {2005},
+  volume    = {45},
+  number    = {2},
+  pages     = {425-441},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.jstor.org/stable/3844552},
 }
 
 @Article{Helsen2000,
@@ -12871,6 +13229,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.04.20},
 }
 
+@InProceedings{Huang2020c,
+  author    = {Huang, Q. and Xiong, Y. and Rao, A. and Wang, J. and Lin, D.},
+  title     = {MovieNet: A Holistic Dataset for Movie Understanding},
+  booktitle = {16th European Conference on Computer Vision},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://arxiv.org/abs/2007.10937},
+}
+
 @Book{Huck2015,
   title     = {What Is Good Writing?},
   publisher = {Oxford University Press},
@@ -13043,6 +13411,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://www.worldcat.org/title/sociolinguistics-selected-readings/oclc/651225},
+}
+
+@Book{Ichikawa2013,
+  title     = {The Shakespearean Stage Space},
+  publisher = {Cambridge University Press},
+  year      = {2013},
+  author    = {Ichikawa, M.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.cambridge.org/core/books/shakespearean-stage-space/4B30F2E4F009D7C3C67C0EFB8A344205},
 }
 
 @Article{Ikonomakis2005,
@@ -13320,6 +13698,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.05.14},
   url       = {https://users.cs.fiu.edu/~markaf/doc/w20.jahan.2019.procwnu_preprint.pdf},
+}
+
+@Article{Jahn2001,
+  author    = {Jahn, M.},
+  title     = {Narrative Voice and Agency in Drama: Aspects of a Narratology of Drama},
+  journal   = {New Literary History},
+  year      = {2001},
+  volume    = {32},
+  number    = {3},
+  pages     = {659-79},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.jstor.org/stable/20057682},
 }
 
 @InProceedings{Jain2007,
@@ -14089,6 +14480,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://pure.knaw.nl/ws/files/481270/karsdorp_et_al2012b.pdf},
 }
 
+@Article{Kastan1985,
+  author    = {Kastan, D. S.},
+  title     = {All's Well That Ends Well and the Limits of Comedy},
+  journal   = {English Literary History},
+  year      = {1985},
+  volume    = {52},
+  number    = {3},
+  pages     = {575},
+  doi       = {10.2307/2872998},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
+@Book{Kastan2001,
+  title     = {Shakespeare and the Book},
+  publisher = {Cambridge University Press},
+  year      = {2001},
+  author    = {Kastan, D. S.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.cambridge.org/fr/academic/subjects/literature/renaissance-and-early-modern-literature/shakespeare-and-book},
+}
+
 @InCollection{Katajala2016,
   author    = {Katajala, K.},
   title     = {Did the rich lead the poor to rebel in the Finnish peasant revolts of the 15th-17th centuries?},
@@ -14299,6 +14713,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://www.cambridge.org/core/books/subverting-scotlands-past/3A5162B47490EA6DD81F900D6FD05833},
+}
+
+@InCollection{Kidnie2004,
+  author    = {Kidnie, M. J.},
+  title     = {The Staging of Shakespeare’s Drama in Print Editions},
+  booktitle = {Textual Performances},
+  publisher = {Cambridge University Press},
+  year      = {2004},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.unige.ch/lettres/angle/en/collaborateurs/modernearly/erne/publications/books/textual-performances-the-modern-reproduction-of-shakespeares-drama/},
 }
 
 @Article{Kiefer2008,
@@ -14750,6 +15175,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://www.cambridge.org/core/books/political-networks/56C92B4EA992885588CDB331E92FEC92},
+}
+
+@Book{Knowles1998,
+  title     = {Shakespeare and Carnival},
+  publisher = {Palgrave Macmillan},
+  year      = {1998},
+  author    = {Knowles, R.},
+  doi       = {10.1057/9780230000810},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
 }
 
 @Book{Knuth1993,
@@ -15707,8 +16142,21 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.01},
 }
 
+@Article{Latour1996,
+  author    = {Latour, B.},
+  title     = {On actor-network theory. A few clarifications plus more than a few complications},
+  journal   = {Soziale welt},
+  year      = {1996},
+  volume    = {47},
+  number    = {4},
+  pages     = {369-381},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.jstor.org/stable/40878163},
+}
+
 @Book{Latour2005,
-  title     = {Reassembling the Social},
+  title     = {Reassembling the Social: An Introduction to Actor-Network-Theory},
   publisher = {Oxford University Press},
   year      = {2005},
   author    = {Latour, B.},
@@ -15717,14 +16165,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.bruno-latour.fr/node/70},
 }
 
-@Book{Latour2007,
-  title     = {Reassembling the Social: An Introduction to Actor-Network-Theory},
-  publisher = {Oxford University Press},
-  year      = {2007},
+@Article{Latour2011,
   author    = {Latour, B.},
+  title     = {Networks, Societies, Spheres: Reflections of an Actor-Network Theorist},
+  journal   = {International Journal of Communication},
+  year      = {2011},
+  volume    = {5},
   owner     = {Vincent},
-  timestamp = {2019.08.21},
-  url       = {http://www.bruno-latour.fr/node/70},
+  timestamp = {2020.07.25},
+  url       = {https://ijoc.org/index.php/ijoc/article/view/1094},
 }
 
 @Article{Lauzen2005,
@@ -15751,6 +16200,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/S0098-7913(99)80118-X},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@InCollection{Law2009,
+  author    = {Law, J.},
+  title     = {Actor Network Theory and Material Semiotics},
+  booktitle = {The New Blackwell Companion to Social Theory},
+  publisher = {Wiley-Blackwell},
+  year      = {2009},
+  pages     = {141-158},
+  doi       = {10.1002/9781444304992.ch7},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
 }
 
 @Article{Layton1986,
@@ -17039,6 +17500,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.08},
 }
 
+@Book{Lin2012,
+  title     = {Shakespeare and the Materiality of Performance},
+  publisher = {Palgrave Macmillan},
+  year      = {2012},
+  author    = {Lin, E. T.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.palgrave.com/gp/book/9781137001061},
+}
+
 @Electronic{Lind2012,
   author       = {Lind, B.},
   month        = {04},
@@ -17278,6 +17749,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/9781118585184.ch15},
   owner     = {Vincent},
   timestamp = {2020.07.24},
+}
+
+@Article{Logan1982,
+  author    = {Logan, T. J.},
+  title     = {Twelfth Night: The Limits of Festivity},
+  journal   = {Studies in English Literature, 1500-1900},
+  year      = {1982},
+  volume    = {22},
+  number    = {2},
+  pages     = {223},
+  doi       = {10.2307/450337},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
 }
 
 @InProceedings{Lombardo2015,
@@ -17602,6 +18086,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1038/ncomms10168},
   owner     = {Vincent},
   timestamp = {2017.12.07},
+}
+
+@Book{Luhmann1995,
+  title     = {Social Systems},
+  publisher = {Stanford University Press},
+  year      = {1995},
+  author    = {Luhmann, N.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.sup.org/books/title/?id=2225},
 }
 
 @Book{Lukacs1963,
@@ -18365,6 +18859,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Book{Marshall2002,
+  title     = {The Shattering of the Self: Violence, Subjectivity, and Early Modern Texts},
+  publisher = {Johns Hopkins University Press},
+  year      = {2002},
+  author    = {Marshall, C.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://jhupbooks.press.jhu.edu/title/shattering-self},
+}
+
 @PhdThesis{Marshall2007,
   author    = {Marshall, L. M.},
   title     = {``I'll Be There For You'' If You Are Just Like Me: An Analysis Of Hegemonic Social Structures in ``Friends''},
@@ -18675,6 +19179,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.22},
 }
 
+@Book{McAlindon1991,
+  title     = {Shakespeare’s Tragic Cosmos},
+  publisher = {Cambridge University Press},
+  year      = {1991},
+  author    = {McAlindon, T.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.cambridge.org/core/books/shakespeares-tragic-cosmos/D4FFA0FAE66B384728EB0791E38AE0C0},
+}
+
+@InCollection{McAlindon2003,
+  author    = {McAlindon, T.},
+  title     = {What is a Shakespearean tragedy?},
+  booktitle = {The Cambridge Companion to Shakespearean Tragedy},
+  publisher = {Cambridge University Press},
+  year      = {2003},
+  pages     = {1-22},
+  doi       = {10.1017/ccol0521790093.001},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @Article{McCallum2007,
   author    = {McCallum, A. and Wang, X. and Corrada-Emmanuel, A.},
   title     = {Topic and Role Discovery in Social Networks with Experiments on Enron and Academic Email},
@@ -18833,6 +19359,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-540-71496-5_51},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Book{McGann1991,
+  title     = {The Textual Condition},
+  publisher = {Princeton University Press},
+  year      = {1991},
+  author    = {McGann, J.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://press.princeton.edu/books/paperback/9780691015187/the-textual-condition},
 }
 
 @Book{McGettigan2013,
@@ -20548,6 +21084,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.17},
 }
 
+@Article{Newman1987,
+  author    = {Newman, K.},
+  title     = {Portia's Ring: Unruly Women and Structures of Exchange in The Merchant of Venice},
+  journal   = {Shakespeare Quarterly},
+  year      = {1987},
+  volume    = {38},
+  number    = {1},
+  pages     = {19},
+  doi       = {10.2307/2870399},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @Article{Newman1999a,
   author    = {Newman, M. E. J. and Watts, D. J.},
   title     = {Renormalization group analysis of the small-world network model},
@@ -21003,6 +21552,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1103.2903},
 }
 
+@Book{Nietzsche1956,
+  title     = {The Birth of Tragedy and the Genealogy of Morals},
+  publisher = {Doubleday},
+  year      = {1956},
+  author    = {Nietzsche, F.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://books.google.fr/books/about/The_Birth_of_Tragedy_and_The_Genealogy_o.html?id=718rAAAAIAAJ},
+}
+
 @InProceedings{Nijila2018,
   author    = {Nijila, M. and Kala, M. T.},
   title     = {Extraction of Relationship Between Characters in Narrative Summaries},
@@ -21259,6 +21818,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1038/35006635},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@InCollection{Nuenning2008,
+  author    = {Nünning, A. and Sommer, R.},
+  title     = {Diegetic and Mimetic Narrativity: Some further Steps towards a Transgeneric Narratology of Drama},
+  booktitle = {Theorizing Narrativity},
+  publisher = {de Gruyter},
+  year      = {2008},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.semanticscholar.org/paper/Diegetic-and-Mimetic-Narrativity%3A-Some-further-a-of-N%C3%BCnning-Sommer/1a6bc249ae362f6ceaf7933aba5c510cc5fd7154},
 }
 
 @Book{Nutt1900,
@@ -22548,6 +23118,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://ernie.uva.nl/viewer.p/21/56/object/122-159380},
 }
 
+@Article{Pikli2010,
+  author    = {Pikli, N.},
+  title     = {Across Cultures},
+  journal   = {European Journal of English Studies},
+  year      = {2010},
+  volume    = {14},
+  number    = {3},
+  pages     = {235-248},
+  doi       = {10.1080/13825577.2010.517294},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @InProceedings{Pilszy2009,
   author    = {Pilászy, I. and Tikk, D.},
   title     = {Recommending new movies},
@@ -22893,6 +23476,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://uk.sagepub.com/en-gb/eur/social-network-analysis/book231856},
+}
+
+@Article{Prendergast2005,
+  author    = {Prendergast, C.},
+  title     = {Derrida's Hamlet},
+  journal   = {SubStance},
+  year      = {2005},
+  volume    = {34},
+  number    = {1},
+  pages     = {44-47},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.jstor.org/stable/3685614},
 }
 
 @Article{Press2016,
@@ -23720,6 +24316,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url         = {https://dspace.mit.edu/handle/1721.1/50232},
 }
 
+@Article{Richardson1987,
+  author    = {Richardson, B.},
+  title     = {"Time Is Out of Joint": Narrative Models and the Temporality of the Drama},
+  journal   = {Poetics Today},
+  year      = {1987},
+  volume    = {8},
+  number    = {2},
+  pages     = {299},
+  doi       = {10.2307/1773039},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
+@InCollection{Richardson2007,
+  author    = {Richardson, B.},
+  title     = {Drama and narrative},
+  booktitle = {The Cambridge Companion to Narrative},
+  publisher = {Cambridge University Press},
+  year      = {2007},
+  pages     = {142-155},
+  doi       = {10.1017/ccol0521856965.010},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @Book{Richardson2010,
   title     = {Television Dramatic Dialogue},
   publisher = {Oxford University Press},
@@ -23742,6 +24363,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/3034956},
   owner     = {Vincent},
   timestamp = {2019.03.26},
+}
+
+@Book{Richmond2004,
+  title     = {Shakespeare's Theatre: A Dictionary of His Stage Context},
+  publisher = {Bloomsbury},
+  year      = {2004},
+  author    = {Richmond, H.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.bloomsbury.com/uk/shakespeares-theatre-9781847146113/},
 }
 
 @Article{Ricoeur1980,
@@ -24123,6 +24754,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://dl.acm.org/citation.cfm?id=1572306.1572309},
+}
+
+@Article{Roberts-Smith2013,
+  author    = {Roberts-Smith, J. and DeSouza-Coelho, S. and Dobson, T. M. and Gabriele, S. and Rodriguez-Arenas, O. and Ruecker, S. and Sinclair, S. and Akong, A. and Bouchard, M. and Hong, M. and Jakacki, D. and Lam, D. and Kovacs, A. and Northam, L. and So, D.},
+  title     = {Visualizing Theatrical Text: From Watching the Script to the Simulated Environment for Theatre (SET)},
+  journal   = {Digital Humanities Quarterly},
+  year      = {2013},
+  volume    = {7},
+  number    = {3},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {http://www.digitalhumanities.org/dhq/vol/7/3/000166/000166.html},
 }
 
 @Electronic{Robinson2015,
@@ -24929,6 +25572,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Book{Salingar1974,
+  title     = {Shakespeare and the Traditions of Comedy},
+  publisher = {Cambridge University Press},
+  year      = {1974},
+  author    = {Salingar, L.},
+  doi       = {10.1017/cbo9780511553189},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @Article{Saltelli2005,
   author    = {Saltelli, A. and Ratto, M. and Tarantola, S. and Campolongo, F.},
   title     = {Sensitivity Analysis for Chemical Models},
@@ -25058,6 +25711,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/00988157.1974.9977130},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@InCollection{Santayana1968,
+  author    = {Santayana, G.},
+  title     = {Hamlet},
+  booktitle = {The Selected Critical Writings of George Santayana},
+  publisher = {Cambridge University Press},
+  year      = {1968},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.cambridge.org/fr/academic/subjects/philosophy/philosophy-texts/selected-critical-writings-george-santayana},
 }
 
 @InProceedings{Santos2010,
@@ -26673,6 +27337,26 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.22},
 }
 
+@Book{Stern2004,
+  title     = {Making Shakespeare: From Stage to Page},
+  publisher = {Psychology Press},
+  year      = {2004},
+  author    = {Stern, T.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.routledge.com/Making-Shakespeare-From-Stage-to-Page/Stern/p/book/9780415319652},
+}
+
+@Book{Stern2009,
+  title     = {Documents of Performance in Early Modern England},
+  publisher = {Cambridge University Press},
+  year      = {2009},
+  author    = {Stern, T.},
+  doi       = {10.1017/cbo9780511635625},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @InProceedings{Stevens2012,
   author    = {Stevens, K. and Kegelmeyer, P. and Andrzejewski, D. and Buttler, D.},
   title     = {Exploring topic coherence over many models and many topics},
@@ -27499,6 +28183,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/acprof:oso/9780198122562.001.0001},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@InCollection{Taylor2002,
+  author    = {Taylor, G.},
+  title     = {Shakespeare plays on Renaissance stages},
+  booktitle = {The Cambridge Companion to Shakespeare on Stage},
+  publisher = {Cambridge University Press},
+  year      = {2002},
+  pages     = {1-20},
+  doi       = {10.1017/ccol0521792959.001},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
 }
 
 @Article{Taylor2017a,
@@ -29252,6 +29948,39 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url         = {https://www.researchgate.net/profile/Gabriel_Weimann/research},
 }
 
+@Book{Weimann1987,
+  title     = {Shakespeare and the Popular Tradition in the Theater},
+  publisher = {Johns Hopkins University Press},
+  year      = {1987},
+  author    = {Weimann, R.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://jhupbooks.press.jhu.edu/title/shakespeare-and-popular-tradition-theater},
+}
+
+@Article{Weimann1999,
+  author    = {Weimann, R.},
+  title     = {Playing with a Difference: Revisiting "Pen" and "Voice" in Shakespeare's Theater},
+  journal   = {Shakespeare Quarterly},
+  year      = {1999},
+  volume    = {50},
+  number    = {4},
+  pages     = {415},
+  doi       = {10.2307/2902278},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
+@Book{Weimann2000,
+  title     = {Author's Pen and Actor's Voice},
+  publisher = {Cambridge University Press},
+  year      = {2000},
+  author    = {Weimann, R.},
+  doi       = {10.1017/cbo9780511484070},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+}
+
 @Article{Weingart2011,
   author    = {Weingart, S. B.},
   title     = {Demystifying Networks, Parts I \& II},
@@ -29262,6 +29991,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.21},
   url       = {http://journalofdigitalhumanities.org/1-1/demystifying-networks-by-scott-weingart/},
+}
+
+@Book{Weingust2007,
+  title     = {Acting from Shakespeare's First Folio: Theory, Text and Performance},
+  publisher = {Routledge},
+  year      = {2007},
+  author    = {Weingust, D.},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
+  url       = {https://www.routledge.com/Acting-from-Shakespeares-First-Folio-Theory-Text-and-Performance/Weingust/p/book/9780415979160},
 }
 
 @Article{Weinland2011,
@@ -29693,6 +30432,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/res/os-III.12.385},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@Article{Wilson1987,
+  author    = {Wilson, R.},
+  title     = {"Is this a Holiday?": Shakespeare's Roman Carnival},
+  journal   = {English Literary History},
+  year      = {1987},
+  volume    = {54},
+  number    = {1},
+  pages     = {31},
+  doi       = {10.2307/2873048},
+  owner     = {Vincent},
+  timestamp = {2020.07.25},
 }
 
 @InProceedings{Wilson2005,
